﻿# Version 2.1.2 - Add Intergration
- Added link to full changelog
- Added daily rewards for voting (-Daily)
- Updated library version to v2.2.0.11

# Version 2.1.1 - Currency and Leaderboards
- Added game leaderboards (-help games)
- Added currency commands (-help currency)
- Added command categories currency & nsfw
- Added more info to profiles
- Fixed some command messages not being deleted
- Fixed some SQL errors
- Fixed some errors with Fun commands
- Fixed possibility of duplicate userdata
- Games reward money
- NSFW commands must now be used inside an nsfw channel
- Reworked LoriUser update method to be more optimised
- Updated help command

# Version 2.1.0 - Return of Games
- Added data cleanup
- Added resource cleanup
- Added Connect 4 (-help connect4)
- Added Tic Tac Toe (-help tictactoe)
- Added tempban command (-help tempban)
- Added motto command (-help setmotto)
- Adjusted status timer
- Adjusted user profiles
- Fixed unhandled exception when trying to access profiles on start up

# Version 2.0.2 - Minor Tweaks and Fixes
- Added moderator commands (-help moderation)
- Added an error message when an unimplemented game is tried
- Added webpanel command (-webpanel)
- Added guild stats command (-stats)
- Improved user creation
- Improved help command
- Updated bot library

# Version 2.0.1 - Mostly Rewritten
- Added improved relationship command (-ship user)
- Added better command error feedback
- Added command to add censored words (-settings addcensor <word>)
- Added userdata
- Added profile command (-profile <@user>)
- Fixed issues with server settings
- Minor tweaks
- Optimised bot restarts
- Optimised fun commands (roast, compliment, punish, punishme, joke, pickup and kill)

# Version 2.0.0 - The Rewrite
- Rewrote Lori's Angel from Scratch (Lori's Angel v2)
- Added moderation features (Enable/Disable for your guild, default: disabled)
- Added all new user commands (-help user)
- Added guild settings command (-settings)